--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "social-sphere-server",
+  "name": "shopping-list-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -36,9 +36,11 @@
     "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "express-jwt": "^8.5.1",
+    "firebase": "^12.1.0",
+    "firebase-tools": "^14.12.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
     "socket.io": "^4.8.1",
